--- a/WeatherApp/WeatherApp/WeatherApp.csproj
+++ b/WeatherApp/WeatherApp/WeatherApp.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IWeatherDataService.cs" />
+    <Compile Include="Location.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeatherData.cs" />
+    <Compile Include="WeatherDataServiceException.cs" />
+    <Compile Include="WeatherDataServiceFactory.cs" />
+    <Compile Include="WeatherMap.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
