--- a/WeatherApp/getWeatherDataUnitTest/getWeatherDataUnitTest.csproj
+++ b/WeatherApp/getWeatherDataUnitTest/getWeatherDataUnitTest.csproj
@@ -56,6 +56,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeatherMapTests.cs" />
     <Compile Include="WeatherWorldTests.cs" />
   </ItemGroup>
   <ItemGroup>
